930-delegate-tasks/src/test/resources/k8s/trafficrouting/HTTPRouteGroupHeader.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: HTTPRouteGroup
metadata:
  labels:
    harness.io/release-name: release-name
  name: header-http-route
  namespace: namespace
spec:
  matches:
  - headers:
      cookie: ^(.*?;)?(type=insider)(;.*)?$
      Content-Type: application/json
      user-agent: .*Android.*
    name: header
