930-delegate-tasks/src/test/resources/k8s/trafficrouting/HTTPRouteGroupMethod.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: HTTPRouteGroup
metadata:
  labels:
    harness.io/release-name: release-name
  name: method-http-route
  namespace: namespace
spec:
  matches:
  - methods:
    - GET
    name: method
