930-delegate-tasks/src/test/resources/k8s/trafficrouting/HTTPRouteGroupUri.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: HTTPRouteGroup
metadata:
  labels:
    harness.io/release-name: release-name
  name: uri-http-route
  namespace: namespace
spec:
  matches:
  - name: uri
    pathRegex: /metrics
