930-delegate-tasks/src/test/resources/k8s/trafficrouting/HTTPRouteGroupUri2.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: HTTPRouteGroup
metadata:
  labels:
    harness.io/release-name: release-name
  name: harness-traffic-routing-release-name-test-http-route
  namespace: namespace
spec:
  matches:
  - pathRegex: /metrics
