930-delegate-tasks/src/test/resources/k8s/trafficrouting/virtualService1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    harness.io/release-name: release-name
  name: stableService-virtual-service
  namespace: namespace
spec:
  hosts:
  - stableService
  http:
  - route:
    - destination:
        host: stageService
      weight: 20
    - destination:
        host: stableService
      weight: 80
