930-delegate-tasks/src/test/resources/k8s/trafficrouting/virtualService4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    harness.io/release-name: release-name
  name: harness-traffic-routing-release-name-8c357ebb69249c6944ba965492bd82839a839ef74b5007eb68dbdf8ca111698e-virtual-service
  namespace: namespace
spec:
  hosts:
  - root-host
  http:
  - route:
    - destination:
        host: firstService
      weight: 60
    - destination:
        host: secondService
      weight: 20
    - destination:
        host: thirdService
      weight: 20
