930-delegate-tasks/src/test/resources/k8s/trafficrouting/virtualService5.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    harness.io/release-name: release-name
  name: stableService-virtual-service
  namespace: namespace
spec:
  hosts:
  - root-host
  http:
  - match:
    - ignoreUriCase: true
      name: rule1
      uri:
        exact: value1
    route:
    - destination:
        host: stableService
      weight: 50
    - destination:
        host: stageService
      weight: 50
  - match:
    - ignoreUriCase: true
      name: rule2
      uri:
        exact: value2
    route:
    - destination:
        host: stableService
      weight: 50
    - destination:
        host: stageService
      weight: 50
